# lazyagents

./: .gitignore  README.md  pyproject.toml
src/lazyagents/: __init__.py  cli.py  memory.py  util.py
src/lazyagents/agent/: __init__.py  console.py  detect.py  tmux.py
src/lazyagents/assets/agents/: dev-lifecycle.md  document-code.md  memory.md  security-review.md  simplify-implementation.md  structured-debug.md  tdd.md  technical-writer.md  verify.md
src/lazyagents/assets/commands/: check-implementation.md  code-review.md  execute-plan.md  new-requirement.md  remember.md  review-design.md  review-requirements.md  update-planning.md  writing-test.md
src/lazyagents/assets/skills/dev-lifecycle/: SKILL.md
src/lazyagents/assets/skills/dev-lifecycle/references/: check-implementation.md  execute-plan.md  new-requirement.md
src/lazyagents/assets/skills/document-code/: SKILL.md
src/lazyagents/assets/skills/memory/: SKILL.md
src/lazyagents/assets/skills/security-review/: SKILL.md
src/lazyagents/assets/skills/simplify-implementation/: SKILL.md
src/lazyagents/assets/skills/structured-debug/: SKILL.md
src/lazyagents/assets/skills/tdd/: SKILL.md
src/lazyagents/assets/skills/technical-writer/: SKILL.md
src/lazyagents/assets/skills/verify/: SKILL.md
src/lazyagents/commands/: agent_cmd.py  docs_cmd.py  init_cmd.py  lint_cmd.py  memory_cmd.py
